--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=ROHAN\\SQLEXPRESS;Initial Catalog=HiringAndSelectionProcessPlatform;Integrated Security=True;Trust Server Certificate=True"
+  }
+
 }
