Three Tables Created

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=ROHAN\\SQLEXPRESS;Initial Catalog=HiringAndSelectionProcessPlatform;Integrated Security=True;Trust Server Certificate=True"
+    "DefaultConnection": "Data Source=DESKTOP-BPKC80C\\SQLEXPRESS;Initial Catalog=HiringAndSelectionProcessPlatform;Integrated Security=True;Trust Server Certificate=True"
   }
 
 }
